♻️ #5540 【需求】租户管理> 所属的菜单变更后自动同步目标租户